# testingCGLM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MyMathLib/: MyMathLib.cpp  MyMathLib.h
